# TechAnalysisExecutor

./: .gitignore  .gitmodules  main.py  progress_log.md  pyproject.toml  requirement.md
app/db/: database.py  models.py  session.py
app/routers/: chart.py
app/services/: chart_service.py  price_service.py  return_service.py
