[project]
name = "techanalysisexecutor"
version = "0.1.0"
description = "기술적 분석 및 차트 시각화 시스템"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "ta>=0.10.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.0.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = ["app", "app.db", "app.services", "app.routers"]
